--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Shakespearean Insult Generator</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Dancing+Script|UnifrakturMaguntia' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div id="header">
