Style index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span id="noun"></span>
             <span id="punc">!</span>
         </p>
-        <input type="button" value="Generate insult!">
+        <input class="button" id="generate" type="button" value="Generate insult!">
     </div>
 </body>
 </html>
